Add GitHub Actions workflow for push events

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,12 @@
 #Name for the Pipeline
 run-name: Test-pipeline-run ${{ github.actor }}
 
+#Events to run pipeline
+on: push
+  branches: 
+    - main
+
+echo "Hello World"
+
+
 
