Fix YAML syntax for GitHub Actions workflow

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,8 +2,9 @@
 run-name: Test-pipeline-run ${{ github.actor }}
 
 #Events to run pipeline
-on: push
-  branches: 
+on: 
+  push:
+    branches: 
     - main
 
 echo "Hello World"
