--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,7 +7,11 @@ on:
     branches: 
     - main
 
-echo "Hello World"
+jobs:
+  test-print-msg-job:
+    runs-on: ununtu-latest
+    name: test-job
+      echo "Hello World"
 
 
 
