--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,8 +12,10 @@ jobs:
     runs-on: ununtu-latest
     steps:
      - name: test-job
+       run:
          echo "hello"
      - name: test-job2
+       run:
          echo "World!"
 
 
