Fix typo in workflow runner OS name

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   test-print-msg-job:
-    runs-on: ununtu-latest
+    runs-on: ubuntu-latest
     steps:
      - name: test-job
        run:
