--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,6 +17,9 @@ jobs:
      - name: listOutFiles
        run:
          ls -la
+     - name: checkOutCode
+       uses: actions/checkout@v3
+       run: ls -la
 
 
 
