--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,6 +19,7 @@ jobs:
          ls -la
      - name: checkOutCode
        uses: actions/checkout@v3
+     - name: postCheckoutRum
        run: ls -la
 
 
