Format run command in postCheckoutRum step

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,7 +20,8 @@ jobs:
      - name: checkOutCode
        uses: actions/checkout@v3
      - name: postCheckoutRum
-       run: ls -la
+       run: 
+         ls -la
 
 
 
