--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,7 +26,10 @@ jobs:
        run:
          cd my-app
      - name: my-appFileCheck
-       run: ls
+       run: 
+         ls -la
+     - name: npm-install
+       run: npm install
   npm-install-job:
     runs-on: ubuntu-latest
     steps:
