--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,16 +25,15 @@ jobs:
      - name: navigateToCode
        run:
          cd my-app
-     - name: my-appFileCheck
-       run: 
          ls -la
-     - name: npm-install
-       run: npm install
+
   npm-install-job:
     runs-on: ubuntu-latest
     steps:
      - name: npm-install
-       run: npm install
+       run: 
+         cd my-app
+         npm install
 
 
 
