--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,7 +20,7 @@ jobs:
      - name: checkOutCode
        uses: actions/checkout@v3
      - name: postCheckoutRum
-       run: 
+       run: |
          ls -la
          cd my-app
          npm install
