--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,7 +25,8 @@ jobs:
          cd my-app
          npm install
      - name: build
-       run: |
-         cd my-app
-         npm run build
+       uses: actions/upload-artifact@v3
+       with:
+         name: my-app-artifact
+         path: my-app/build/
 
