--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,12 +19,13 @@ jobs:
          ls -la
      - name: checkOutCode
        uses: actions/checkout@v3
-     - name: npm-install
+     - name: npm-install and Build
        run: |
          ls -la
          cd my-app
          npm install
-     - name: build
+         npm run build
+     - name: build artifact upload
        uses: actions/upload-artifact@v4
        with:
          name: my-app-artifact
